# agent-tools-proxy

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml
app/: config.py  main.py
app/core/: adapters.py  buffer.py  formatter.py  prompt.py
app/models/: llm.py  openai.py
app/routers/: chat.py  models.py  proxy.py
docs/: ADR.md  ARCHITECTURE.md  DESIGN.md  PROMPT_ENGINEERING.md  ROADMAP.md
examples/: openai_tools_call.py  openai_tools_define.py  openai_tools_vllm.py
tests/: conftest.py  test_adapters.py  test_buffer.py  test_chat.py  test_formatter.py  test_prompt.py  test_proxy.py
