
[project]
name = "agent-tools-proxy"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "httpx>=0.27.0",          # async HTTP client for LLM backend
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "sse-starlette>=2.1.0",   # clean SSE streaming helper
    "pytest-asyncio>=1.3.0",
    "openai>=2.31.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",           # also used in TestClient
    "ruff>=0.4.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.ruff]
line-length = 100

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

